--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 <body>
 <div class="test">
     <ul>
-        <label>Basic instructions to integrate this chatbot</label>
+        <label>How to use and integrate this chatbot</label>
         <li>click on the chat-bot icon placed at bottom right corner</li>
         <li>click correct option or enter correct option no</li>
+        <li>click on red button at top right corner to close this chatbot</li>
         <li>anyone can easily integrate this chatbot by copying 'chat' and 'chatbtn' class along with its css</li>
         <li>That's it integrate it and ask your problem to astra helper chatbot</li>
     </ul>
 </div>
+<!-- integrate 'chat' class and 'chat-btn' class only 'test' class is just for instruction -->
     <div class="chat">
         <div class="close"><div class="close1"></div></div>
         <div class="chat-head"><label for="chat-head">AstraHelper</label></div>
